# crosslink-back

./: .gitignore  Makefile  README.md  bitbucket-pipelines.yml  cert.pem  docker-compose.yml  key.pem  pyproject.toml
crosslink/: manage.py
crosslink/configs/: asgi.py  urls.py  wsgi.py
crosslink/configs/settings/: common.py  local.py  production.py  tests.py
crosslink/home/: apps.py  permissions.py  urls.py  utils.py
crosslink/home/dataclasses/: __init__.py  cross_sell.py  dashboard.py  recommendation.py
crosslink/home/documents/: products.py
crosslink/home/helpers/: widget_helpers.py
crosslink/home/kafka/: consumer.py  producer.py
crosslink/home/migrations/: 0001_initial.py
crosslink/home/models/: __init__.py  base.py  cross_sell.py  discount.py  product.py  shop.py  upsell.py
crosslink/home/script_tags/: local_widget_script_tag.js  productioin_widget_script_tag.js  widget.css
crosslink/home/search/: documents.py  signals.py
crosslink/home/serializers/: __init__.py  cross_sell.py  dashboard.py  discount.py  product.py  shop.py  upsell.py
crosslink/home/services/: cross_sell.py  discount.py  recommendations.py  upsell.py
crosslink/home/tasks/: __init__.py  discount.py  generated_sales.py  product.py  shop.py  upsell.py
crosslink/home/templates/: cross_sell.py
crosslink/home/tests/: test_cross_sell.py  test_dashboard.py  test_generated_sales.py  test_services.py  (+1 more)
crosslink/shopify_app/: apps.py  models.py  services.py  urls.py
crosslink/users/: models.py  serializers.py  urls.py  views.py
deployment/test/: Dockerfile  entrypoint.sh
(+50 files in other folders)
